tyzen/tests/ui/optional_non_option.rs
use tyzen::Type;

#[derive(Type)]
struct InvalidOptional {
    #[tyzen(optional)]
    count: u32,
}

fn main() {}
